fix layout spacing on borders

--- a/sh-frontend/tailwind.css
+++ b/sh-frontend/tailwind.css
@@ -7,24 +7,13 @@ h2 {
   text-align: center;
 }
 
-html,
-body {
-  margin: 0;
-  height: 100%;
-}
-
-* {
-  font-family: "Raleway";
-  box-sizing: border-box;
-}
-
 .top-nav {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   background-color: #00baf0;
-  background: linear-gradient(to left, #f46b45, #eea849);
+  background: linear-gradient(to left, #54428e, #8963ba);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #fff;
   height: 50px;
